--- a/package/libs/toolchain/Makefile
+++ b/package/libs/toolchain/Makefile
@@ -259,6 +259,7 @@ define Package/libgo
 $(call Package/gcc/Default)
   TITLE:=Go support library
   DEPENDS+=@INSTALL_GCCGO
+  DEPENDS+=@USE_EGLIBC
 endef
 
 define Package/libgo/config
